# ComfyUI-FLOAT

./: README.md  __init__.py  float_workflow.json  generate.py  nodes.py  pyproject.toml  requirements.txt  resample.py
.github/: FUNDING.yml
models/: basemodel.py  wav2vec2_ser.py
models/float/: FLOAT.py  FMT.py  encoder.py  generator.py  styledecoder.py
options/: base_options.py
